studentservice/src/main/java/com/example/studentservice/core/error/BadCredentialsException.java
package com.example.studentservice.core.error;

public class BadCredentialsException extends RuntimeException {
    public BadCredentialsException(String message) {
        super(message);
    }
}
